// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDisableRuleFileCodeAction should create a code action to disable a rule for an entire file 1`] = `
Object {
  "edit": Object {
    "changeAnnotations": undefined,
    "documentChanges": Array [
      Object {
        "edits": Array [
          Object {
            "newText": "/* stylelint-disable rule */
",
            "range": Object {
              "end": Object {
                "character": 0,
                "line": 0,
              },
              "start": Object {
                "character": 0,
                "line": 0,
              },
            },
          },
        ],
        "textDocument": Object {
          "uri": "file:///home/user/src/file.css",
          "version": 1,
        },
      },
    ],
  },
  "kind": "quickfix",
  "title": "Disable rule for the entire file",
}
`;

exports[`createDisableRuleFileCodeAction should place the code action on the second line if the file has a shebang 1`] = `
Object {
  "edit": Object {
    "changeAnnotations": undefined,
    "documentChanges": Array [
      Object {
        "edits": Array [
          Object {
            "newText": "/* stylelint-disable rule */
",
            "range": Object {
              "end": Object {
                "character": 0,
                "line": 1,
              },
              "start": Object {
                "character": 0,
                "line": 1,
              },
            },
          },
        ],
        "textDocument": Object {
          "uri": "file:///home/user/src/file.js",
          "version": 1,
        },
      },
    ],
  },
  "kind": "quickfix",
  "title": "Disable rule for the entire file",
}
`;
